; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29949.c_put_word.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_29949.c_put_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @put_word(i8* %0, i16 zeroext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i16, align 2
  store i8* %0, i8** %3, align 8
  store i16 %1, i16* %4, align 2
  %5 = load i8*, i8** %3, align 8
  %6 = load i16, i16* %4, align 2
  %7 = call i32 @put_byte(i8* %5, i16 zeroext %6)
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 1
  %10 = load i16, i16* %4, align 2
  %11 = zext i16 %10 to i32
  %12 = ashr i32 %11, 8
  %13 = trunc i32 %12 to i16
  %14 = call i32 @put_byte(i8* %9, i16 zeroext %13)
  ret void
}

declare dso_local i32 @put_byte(i8*, i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
